--- a/Examples/GroupDocs.Annotation.Examples.CSharp/GroupDocs.AnnotationDataStorage/packages.config
+++ b/Examples/GroupDocs.Annotation.Examples.CSharp/GroupDocs.AnnotationDataStorage/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GroupDocs.Annotation" version="19.1.0" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net40" />
+  <package id="GroupDocs.Annotation" version="19.3.0" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="12.0.2-beta1" targetFramework="net40" />
 </packages>
