Updated samples for 21.3

--- a/Examples/GroupDocs.Annotation.Examples.CSharp.Core/GroupDocs.Annotation.Examples.CSharp.Core.csproj
+++ b/Examples/GroupDocs.Annotation.Examples.CSharp.Core/GroupDocs.Annotation.Examples.CSharp.Core.csproj
@@ -12,7 +12,8 @@
   <Import Project="..\GroupDocs.Annotation.Examples.CSharp\GroupDocs.Annotation.Examples.CSharp.projitems" Label="Shared" />
 
   <ItemGroup>
-    <PackageReference Include="GroupDocs.Annotation" Version="21.2.0" />
+    <PackageReference Include="GroupDocs.Annotation" Version="21.3.0" />
+    <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.80.0" />
   </ItemGroup>
 
 </Project>
